# esp32s3watch

./: .gitignore  README.md  README_CN.md  changeui.sh  lv_conf.h  partitions.csv  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/audio/: CMakeLists.txt  audio_input.c  audio_output.c
components/audio/include/: audio.h  format_wav.h
components/ble_srv/: CMakeLists.txt  ble_srv.c  esp_hid_gap.c
components/ble_srv/include/: ble_srv.h  esp_hid_gap.h
components/bsp_driver/: CMakeLists.txt  bsp_driver.c
components/bsp_driver/include/: bsp_driver.h
components/camera/: CMakeLists.txt  camera.c
components/camera/include/: camera.h
components/custom_event/: CMakeLists.txt  custom_event.c
components/custom_event/include/: custom_event.h
components/event/: CMakeLists.txt  event.c
components/event/include/: event.h
components/io_extend/: CMakeLists.txt  io_extend.c
components/io_extend/include/: io_extend.h
components/my_ui/: CMakeLists.txt  my_ui.c
components/my_ui/include/: my_ui.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/sdcard/include/: sdcard.h
components/time_srv/: CMakeLists.txt  time_srv.c
components/time_srv/include/: time_srv.h
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_themes.c  ui_themes.h
components/ui/images/: ui_img_1703540290.c  ui_img_bluetooth_png.c  ui_img_calender_png.c  ui_img_camera_png.c  ui_img_canvas_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_cloudyimage1_png.c  ui_img_cloudyimage2_png.c  ui_img_computer_png.c  ui_img_file_png.c  ui_img_heavyrainimage_png.c  ui_img_hugeiconswifioff02_png.c  ui_img_kikyou_png.c  ui_img_lightrainimage_png.c  ui_img_moderaterainimage_png.c  ui_img_music1_png.c  ui_img_partcloudyimage_png.c  ui_img_return_png.c  ui_img_streamlinewifi_png.c  ui_img_sunimage_png.c  ui_img_weather_png.c  ui_redtest.c
components/ui/screens/: ui_app1.c  ui_app1.h  ui_app2.c  ui_app2.h  ui_bt.c  ui_bt.h  ui_calculator.c  ui_calculator.h  ui_calender.c  ui_calender.h  ui_camera.c  ui_camera.h  ui_canvas.c  ui_canvas.h  ui_clock.c  ui_clock.h  ui_lockScreen.c  ui_lockScreen.h  ui_sd_browser.c  ui_sd_browser.h  ui_setting.c  ui_setting.h  ui_weather.c  ui_weather.h  ui_wifi.c  ui_wifi.h
components/weather_srv/: CMakeLists.txt  weather_srv.c
components/weather_srv/include/: weather_srv.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
main/: CMakeLists.txt  idf_component.yml  test1.c
